[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Troop.gd" type="Script" id=1]
[ext_resource path="res://Entities/SelectionArea.gd" type="Script" id=2]
[ext_resource path="res://Art/materials/default_material_gray.tres" type="Material" id=3]
[ext_resource path="res://Art/materials/troop_selected_Material.tres" type="Material" id=4]
[ext_resource path="res://Components/Health_Component.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/Radius_Component.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/nav_agent.gd" type="Script" id=11]

[sub_resource type="CapsuleShape" id=9]
radius = 1.25

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.25, 1, 0.25 )

[sub_resource type="CubeMesh" id=12]
size = Vector3( 0.5, 2, 0.5 )

[node name="Troop" type="KinematicBody" groups=["troop"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
idleMaterial = ExtResource( 3 )
selectedMaterial = ExtResource( 4 )
health = 4

[node name="nav_agent" type="NavigationAgent" parent="."]
target_desired_distance = 0.1
radius = 2.0
script = ExtResource( 11 )
MAX_SPEED = 5.0

[node name="Health_Component" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.49614, 0 )

[node name="SelectionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
collision_mask = 0
monitorable = false
priority = 1.0
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="SelectionArea"]
shape = SubResource( 9 )

[node name="Radius_Component" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
visible = false
radius = 6.0

[node name="CollisionShape1" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
shape = SubResource( 11 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
shape = SubResource( 11 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
shape = SubResource( 11 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
shape = SubResource( 11 )

[node name="meshes" type="Spatial" parent="."]

[node name="TroopColor1" type="MeshInstance" parent="meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")

[node name="TroopColor2" type="MeshInstance" parent="meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")

[node name="TroopColor3" type="MeshInstance" parent="meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")

[node name="TroopColor4" type="MeshInstance" parent="meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")

[connection signal="selection_changed" from="." to="nav_agent" method="_on_Troop_selection_changed"]
[connection signal="i_am_dead" from="Health_Component" to="." method="_on_HealtComponent_i_am_dead"]
[connection signal="selection_toggled" from="SelectionArea" to="." method="_on_SelectionArea_selection_toggled"]
